# zgca

./: .gitignore  AGENTS.md  col_description.md  idea_data.csv  idea_data.json  prompt.md  pyproject.toml  rag_idea_generator.py  record.csv  record.json  requirements.txt  speech_test.py  speech_test_api.md
lab_assistant_app/: README.md  data.txt  pubspec.yaml
lab_assistant_app/android/app/: build.gradle.kts
lab_assistant_app/android/app/src/main/: AndroidManifest.xml
lab_assistant_app/android/app/src/main/kotlin/com/lab/assistant/lab_assistant_app/: MainActivity.kt
lab_assistant_app/docs/superpowers/plans/: 2026-05-25-lab-assistant-product-loop.md
lab_assistant_app/ios/Runner/: Info.plist
lab_assistant_app/ios/Runner.xcodeproj/: project.pbxproj
lab_assistant_app/lib/: main.dart  theme.dart
lab_assistant_app/lib/models/: experiment.dart
lab_assistant_app/lib/screens/: ideas_screen.dart  project_history_screen.dart  recording_screen.dart  splash_screen.dart  start_experiment_screen.dart
lab_assistant_app/lib/services/: lab_workflow_service.dart
lab_assistant_app/lib/state/: app_state.dart
lab_assistant_app/lib/widgets/: section_card.dart  wave_decoration.dart
lab_assistant_app/macos/Runner.xcodeproj/: project.pbxproj
lab_assistant_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
lab_assistant_app/macos/Runner/Configs/: AppInfo.xcconfig
lab_assistant_app/test/: app_state_test.dart  lab_workflow_service_test.dart  widget_test.dart
