[project]
name = "zgca-hackathon"
version = "0.1.0"
description = "Experiment record extraction, speech recording, and RAG idea generation."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "chromadb>=1.5.9",
    "ipykernel>=6.30.0",
    "modelscope>=1.37.0",
    "openai>=2.38.0",
    "pandas>=2.3.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.0",
    "requests>=2.34.0",
    "sentence-transformers>=5.5.0",
    "speechrecognition>=3.14.0",
    "websocket-client>=1.9.0",
]

[tool.uv]
package = false
